--- a/window.html
+++ b/window.html
@@ -3,19 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-
 	<script>
-		function outer() {
-			let a = 6
-			function inner (){
-        console.log(a);
-      }
-      inner()
-    }
-    a = 10
-    outer()
+    console.log(window);
 	</script>
-
 </head>
 <body>
 
